Project design complete and implemented.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,39 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <h1>test</h1>
+    <div class="container">
+        <div class="game-title">Rock, Paper, Scissors</div>
+        <div class="game-container">
+            <div class="game-result">
+                <div class="display-result">Win or Loss</div>
+                <div class="display-result-info">X is beaten by Y</div>
+            </div>
+            <div class="game-score">
+                <div class="score">
+                    <div class="player-icon"><img src="../img/paper.svg" alt="something" height="200px"></div>
+                    <div class="player-score">Player: 0</div>
+                </div>
+                <div class="score">
+                    <div class="computer-icon"><img src="../img/rock.svg" alt="test" height="200px"></div>
+                    <div class="computer-score">Computer: 0</div>
+                </div>
+            </div>
+            <div class="game-moves">
+                <div class="move-rock">
+                    <button type="button"><img src="../img/rock.svg" alt="Rock" height="125px"></button>
+                </div>
+                <div class="move-paper">
+                    <button type="button"><img src="../img/paper.svg" alt="Paper" height="125px"></button>
+                </div>
+                <div class="move-scissors">
+                    <button type="button"><img src="../img/scissors.svg" alt="Scissors" height="125px"></button>
+                </div>
+            </div>
+        </div>
+        <div class="page-footer">
+            <p>Nathan Baird, 2023.</p>
+            <a href="https://github.com/NathanB98/RockPaperScissorsGame"><img src="../img/github_white_logo.svg" alt="GitHub" height="25px"></a>
+        </div>
+    </div>
 </body>
 </html>
