--- a/src/index.html
+++ b/src/index.html
@@ -15,28 +15,28 @@
         <div class="game-title">Rock, Paper, Scissors</div>
         <div class="game-container">
             <div class="game-result">
-                <div class="display-result">Win or Loss</div>
-                <div class="display-result-info">X is beaten by Y</div>
+                <div class="display-result"></div>
+                <div class="display-result-info"></div>
             </div>
             <div class="game-score">
                 <div class="score">
-                    <div class="player-icon"><img src="../img/paper.svg" alt="something" height="200px"></div>
+                    <div class="player-icon"><img src="../img/Rock.svg" alt="something" height="200px" class="p-icon"></div>
                     <div class="player-score">Player: 0</div>
                 </div>
                 <div class="score">
-                    <div class="computer-icon"><img src="../img/rock.svg" alt="test" height="200px"></div>
+                    <div class="computer-icon"><img src="../img/Paper.svg" alt="test" height="200px" class="c-icon"></div>
                     <div class="computer-score">Computer: 0</div>
                 </div>
             </div>
             <div class="game-moves">
                 <div class="move-rock">
-                    <button type="button"><img src="../img/rock.svg" alt="Rock" height="125px"></button>
+                    <button type="button" id="Rock" data-moveset><img src="../img/Rock.svg" alt="Rock" height="125px"></button>
                 </div>
                 <div class="move-paper">
-                    <button type="button"><img src="../img/paper.svg" alt="Paper" height="125px"></button>
+                    <button type="button" id="Paper" data-moveset><img src="../img/Paper.svg" alt="Paper" height="125px"></button>
                 </div>
                 <div class="move-scissors">
-                    <button type="button"><img src="../img/scissors.svg" alt="Scissors" height="125px"></button>
+                    <button type="button" id="Scissors" data-moveset=""><img src="../img/Scissors.svg" alt="Scissors" height="125px"></button>
                 </div>
             </div>
         </div>
